// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`flowson can set indentation and typename 1`] = `
"// @flow
export type configT = {
    \\"str\\": \\"cake\\",
    \\"foo\\": [
        1,
        2
    ],
    \\"nestedObj\\": {
        \\"foo\\": \\"bar\\"
    }
}"
`;

exports[`flowson transforms json as expected 1`] = `
"// @flow
export type configT = {
  \\"str\\": \\"cake\\",
  \\"number\\": 1,
  \\"bool\\": false,
  \\"arr\\": [
    1,
    true,
    \\"foo\\",
    {},
    [
      1,
      {
        \\"foo\\": \\"bar\\"
      }
    ]
  ],
  \\"nestedObj\\": {
    \\"arr\\": [
      1,
      true,
      \\"foo\\",
      {},
      [
        1,
        {
          \\"foo\\": \\"bar\\"
        }
      ]
    ],
    \\"foo\\": \\"bar\\",
    \\"Baz-foo\\": {
      \\"baz_\\": 1
    }
  }
}"
`;
